Replace existing recipe with a different one
Simpler and more straightforward recipe relative to replace a
significantly more complicated one.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     
-    <a href="./recipes/maqluba.html">Palestinian Chicken Maqluba</a>
+    <a href="./recipes/cashew-milk.html">Homemade Cashew Milk</a>
 </body>
 </html>
