Add link to homepage
Added the missing link that allows the user to navigate back to the
homepage.

--- a/recipes/cashew-milk.html
+++ b/recipes/cashew-milk.html
@@ -37,5 +37,7 @@
 
     <p>Feel free to substitute any other nuts or seeds of your choice in this recipe, but keep in mind that harder nuts, like almonds, will require an additional step to strain out the pulp with the use of a nut milk bag.</p>
 
+    <a href="../index.html">Home</a>
+
 </body>
 </html>
