Add two more recipes
Two more recipes were added and listed with hyperlinks on the index
page.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
     
-    <a href="./recipes/cashew-milk.html">Homemade Cashew Milk</a>
+    <ul>
+        <li><a href="./recipes/cashew-milk.html">Homemade Cashew Milk</a></li>
+        <li><a href="./recipes/raw-fettuccine-alfredo.html">Raw Vegan Fettuccine Alfredo</a></li>
+        <li><a href="./recipes/strawberry-banana-nice-cream.html">Strawberry Banana Nice Cream</a></li>
+    </ul>
+    
 </body>
 </html>
