--- a/recipes/cashew-milk.html
+++ b/recipes/cashew-milk.html
@@ -14,7 +14,7 @@
 
     <p>This is an easy plant-based recipe to make a rich and creamy cashew milk from home. You'll find it to be so delicious that you'll never want to reach for store-bought cashew milk again! It also serves as an excellent non-dairy substitute for coffee creamer.</p>
 
-    <p>Please note: This recipe requires a high powered blender like the Vitamix.</p>
+    <p>Please note: This recipe requires a high powered blender like the Vitamix. Do not use a conventional blender as this recipe could break it.</p>
 
     <p>Serves 4 | Total Time: 12 hours</p>
 
@@ -28,6 +28,13 @@
         <li>1 cup (130 g) ice cubes</li>
     </ul>
 
+    <h3>Equipmemt</h3>
+    <ul>
+        <li>High speed blender</li>
+        <li>Large glass bowl or 32 oz mason jar for soaking</li>
+        <li>Large glass pitcher or 32 oz mason jar for storing</li>
+    </ul>
+
     <h3>Steps</h3>
     <ol>
         <li>Place the cashews in a glass mason jar and cover them in filtered water. Soak the cashews overnight for 12 hours.</li>
@@ -35,7 +42,7 @@
         <li>Start the machine at its lowest setting and slowly increase to its highest speed. Blend for 40 seconds.</li>
     </ol>
 
-    <p>Feel free to substitute any other nuts or seeds of your choice in this recipe, but keep in mind that harder nuts, like almonds, will require an additional step to strain out the pulp with the use of a nut milk bag.</p>
+    <p>Feel free to substitute any other nuts or seeds of your choice in this recipe, but keep in mind that harder nuts, like almonds, will require an additional step to strain out the pulp with the use of a nut milk bag. Good for 3 days when kept sealed in the refrigerator.</p>
 
     <a href="../index.html">Home</a>
 
