Fix minor HTML error and apply basic CSS styling
Resolved a typographic error in html recipe pages. Applied basic CSS
styles to new stylesheet.css file and linked it to all site pages.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     
-    <ul>
-        <li><a href="./recipes/cashew-milk.html">Homemade Cashew Milk</a></li>
-        <li><a href="./recipes/raw-fettuccine-alfredo.html">Raw Vegan Fettuccine Alfredo</a></li>
-        <li><a href="./recipes/strawberry-banana-nice-cream.html">Strawberry Banana Nice Cream</a></li>
+    <ul class="navigation">
+        <li class="recipe"><a href="./recipes/cashew-milk.html">Homemade Cashew Milk</a></li>
+        <li class="recipe"><a href="./recipes/raw-fettuccine-alfredo.html">Raw Vegan Fettuccine Alfredo</a></li>
+        <li class="recipe"><a href="./recipes/strawberry-banana-nice-cream.html">Strawberry Banana Nice Cream</a></li>
     </ul>
     
 </body>
