--- a/recipes/cashew-milk.html
+++ b/recipes/cashew-milk.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
     <title>Homemade Cashew Milk</title>
 </head>
 <body>
     <h1>Homemade Cashew Milk</h1>
 
-    <img src="https://www.hazteveg.com/img/recipes/full/201902/R24-57721.jpg">
+    <img class="photo" src="https://www.hazteveg.com/img/recipes/full/201902/R24-57721.jpg">
 
     <h2>Description</h2>
 
@@ -28,7 +29,7 @@
         <li>1 cup (130 g) ice cubes</li>
     </ul>
 
-    <h3>Equipmemt</h3>
+    <h3>Equipment</h3>
     <ul>
         <li>High speed blender</li>
         <li>Large glass bowl or 32 oz mason jar for soaking</li>
@@ -44,7 +45,7 @@
 
     <p>Feel free to substitute any other nuts or seeds of your choice in this recipe, but keep in mind that harder nuts, like almonds, will require an additional step to strain out the pulp with the use of a nut milk bag. Good for 3 days when kept sealed in the refrigerator.</p>
 
-    <a href="../index.html">Home</a>
+    <a class="navigation site" href="../index.html">Home</a>
 
 </body>
 </html>
