--- a/recipes/raw-fettuccine-alfredo.html
+++ b/recipes/raw-fettuccine-alfredo.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
     <title>Raw Vegan Fettuccine Alfredo</title>
 </head>
 <body>
     <h1>Raw Vegan Fettuccine Alfredo</h1>
 
-    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthvnext.bing.com%2Fth%2Fid%2FOIP.K27uqNsGYXEGbMERfAalrQHaLG%3Fcb%3Ducfimgc2%26pid%3DApi&f=1&ipt=692385acdde7db94a9795a2fd325b2f0ee6ef7bd6b12738ea8afe2680e0889aa">
+    <img class="photo" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthvnext.bing.com%2Fth%2Fid%2FOIP.K27uqNsGYXEGbMERfAalrQHaLG%3Fcb%3Ducfimgc2%26pid%3DApi&f=1&ipt=692385acdde7db94a9795a2fd325b2f0ee6ef7bd6b12738ea8afe2680e0889aa">
 
     <h2>Description</h2>
 
@@ -29,7 +30,7 @@
         <li>Florets from 1/2 head of cauliflower, coarsely chopped</li>
     </ul>
 
-    <h3>Equipmemt</h3>
+    <h3>Equipment</h3>
     <ul>
         <li>Sharp chopping knife</li>
         <li>Cutting board</li>
@@ -50,7 +51,7 @@
 
     <p>This recipe is sourced from The Fully Raw Diet book, written by Kristina Carrillo-Bucaram</p>
 
-    <a href="../index.html">Home</a>
+    <a class="navigation site" href="../index.html">Home</a>
 
 </body>
 </html>
