--- a/recipes/strawberry-banana-nice-cream.html
+++ b/recipes/strawberry-banana-nice-cream.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
     <title>Strawberry Banana Nice Cream</title>
 </head>
 <body>
     <h1>Strawberry Banana Nice Cream</h1>
 
-    <img src="https://c.pxhere.com/photos/14/2c/photo-1413044.jpg!d">
+    <img class="photo" src="https://c.pxhere.com/photos/14/2c/photo-1413044.jpg!d">
 
     <h2>Description</h2>
 
@@ -25,7 +26,7 @@
         <li>1 cup fresh strawberries, greens removed</li>
     </ul>
 
-    <h3>Equipmemt</h3>
+    <h3>Equipment</h3>
     <ul>
         <li>Sharp chopping knife</li>
         <li>Cutting board</li>
@@ -44,7 +45,7 @@
 
     <p>It is best to eat the banana nice cream immediately because it does not freeze well after melting.</p>
 
-    <a href="../index.html">Home</a>
+    <a class="navigation site" href="../index.html">Home</a>
 
 </body>
 </html>
